--- a/package.json
+++ b/package.json
@@ -9,19 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.1",
+    "byte-base64": "^1.1.0",
+    "clsx": "^2.1.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.2",
+    "geodesy": "^2.4.0",
+    "next": "14.1.3",
+    "piexifjs": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.3"
+    "react-globe.gl": "^2.27.2"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/geodesy": "^2.2.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.3"
+    "typescript": "^5"
   }
 }
