--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.2",
     "geodesy": "^2.4.0",
+    "heic-convert": "^2.1.0",
+    "leaflet": "^1.9.4",
     "next": "14.1.3",
     "piexifjs": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-globe.gl": "^2.27.2"
+    "react-globe.gl": "^2.27.2",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
     "@types/geodesy": "^2.2.7",
+    "@types/heic-convert": "^1.2.3",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
