--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --max-warnings 0",
+    "type-check": "tsc --noEmit",
+    "format": "prettier --write \"**/*.{ts,tsx,md,js,mjs,cjs}\""
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@sentry/nextjs": "7.105.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "byte-base64": "^1.1.0",
@@ -24,7 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-globe.gl": "^2.27.2",
-    "react-leaflet": "^4.2.1"
+    "react-leaflet": "^4.2.1",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/geodesy": "^2.2.7",
@@ -37,7 +41,9 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
+    "turbo": "^1.13.0",
     "typescript": "^5"
   }
 }
